<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/idIVbook"
            android:layout_width="130dp"
            android:layout_height="160dp"
            android:contentDescription="@string/book_cover"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/idTVBookTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/idIVbook"
            android:padding="3dp"
            android:text="@string/book_title"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/idTVpublisher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idTVBookTitle"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@id/idIVbook"
            android:padding="3dp"
            android:text="@string/publisher"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/idTVPageCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idTVpublisher"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="41dp"
            android:layout_toEndOf="@id/idIVbook"
            android:padding="3dp"
            android:text="@string/page_count"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <Button
            android:id="@+id/add_book_to_list"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:layout_marginTop="120dp"
            android:padding="3dp"
            android:text="@string/add" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>